--- a/index.html
+++ b/index.html
@@ -3,56 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore smart energy solutions in Oman with Alwejha Group. We specialize in solar, efficient power systems, and smart grid integration." />
-  <meta name="keywords" content="smart energy Oman, renewable energy, energy solutions Oman, smart grid Oman, solar energy" />
+  <meta name="description" content="Explore smart energy solutions in Oman with Alwejha Group. We offer solar panel systems, smart energy monitoring, and more." />
   <meta name="robots" content="index, follow" />
-  <title>Smart Energy Solutions Oman | Alwejha Group</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Smart Energy Solutions in Oman | Alwejha Group</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+    header {
+      background-color: #0077e6;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 14px;
+    }
+    nav {
+      background-color: white;
+      text-align: center;
+      padding: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #0077e6;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 5px;
+    }
+    .container img {
+      width: 100%;
+      border-radius: 5px;
+      margin-bottom: 20px;
+    }
+    h2 {
+      color: #0077e6;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .cta-buttons {
+      margin-top: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .cta-buttons a {
+      background-color: #0077e6;
+      color: white;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 4px;
+      display: inline-block;
+    }
+    .footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+      color: #555;
+    }
+    .footer a {
+      color: #0077e6;
+      margin: 0 5px;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1>Smart Energy Solutions in Oman</h1>
-      <p>Innovative and Sustainable Power Solutions by Alwejha Group</p>
-    </div>
-  </header>
 
-  <section class="hero">
-    <img src="smart-energy-solutions-oman.webp" alt="Smart Energy Solutions Oman" class="hero-image" />
-  </section>
+<header>
+  <h1>Smart Energy Solutions in Oman</h1>
+  <p>Innovative and Sustainable Power Solutions by Alwejha Group</p>
+</header>
 
-  <section class="content container">
-    <h2>Leading the Smart Energy Revolution</h2>
-    <p>At Alwejha Group, we empower Oman with cutting-edge smart energy solutions. From solar energy systems to smart grid technology, we help reduce energy costs and improve sustainability.</p>
+<nav>
+  <a href="https://www.alwejhagroup.com/">Home</a>
+  <a href="https://www.alwejhagroup.com/area-of-expertise">Area Of Expertise</a>
+  <a href="https://www.alwejhagroup.com/our-services">Our Services</a>
+  <a href="https://www.alwejhagroup.com/contact">Contact</a>
+</nav>
 
-    <h3>Our Smart Energy Services Include:</h3>
-    <ul>
-      <li>Advanced solar panel systems</li>
-      <li>Smart energy monitoring and control</li>
-      <li>Energy-efficient lighting and automation</li>
-      <li>Battery storage and load management</li>
-      <li>Customized energy audits and optimization</li>
-    </ul>
+<div class="container">
+  <img src="smart-energy-solutions-oman.webp" alt="Smart Energy System in Oman">
 
-    <p>With our experience in deploying innovative energy systems, we help industries, commercial buildings, and residential communities achieve energy independence.</p>
-  </section>
+  <h2>Leading the Smart Energy Revolution</h2>
+  <p>
+    At Alwejha Group, we empower Oman with cutting-edge smart energy solutions. From solar energy systems to smart grid technology, we help reduce energy costs and improve sustainability for industries, commercial buildings, and communities.
+  </p>
 
-  <section class="cta container">
-    <a href="https://www.alwejhagroup.com/contact" class="btn">Get a Free Consultation</a>
-  </section>
+  <h3>Our Smart Energy Services Include:</h3>
+  <ul>
+    <li>Advanced solar panel systems</li>
+    <li>Smart energy monitoring and control</li>
+    <li>Energy-efficient lighting and automation</li>
+    <li>Battery storage and load management</li>
+    <li>Customized energy audits and optimization</li>
+  </ul>
 
-  <footer class="footer container">
-    <nav class="footer-nav">
-      <a href="https://www.alwejhagroup.com/">Home</a> |
-      <a href="https://www.alwejhagroup.com/area-of-expertise">Area of Expertise</a> |
-      <a href="https://www.alwejhagroup.com/our-services">Our Services</a> |
-      <a href="https://www.alwejhagroup.com/contact">Contact</a>
-    </nav>
-    <div class="visit-btn">
-      <a href="https://www.alwejhagroup.com/" class="btn visit-site">Visit Our New Website</a>
-    </div>
-    <p>&copy; 2025 Alwejha Group. All rights reserved.</p>
-  </footer>
+  <h3>Learn More About AL WEJHA GROUP</h3>
+  <p>
+    Discover our comprehensive range of smart energy solutions by visiting our main website:
+  </p>
+
+  <div class="cta-buttons">
+    <a href="https://www.alwejhagroup.com/">Visit AL WEJHA GROUP</a>
+    <a href="https://wa.me/">Chat on WhatsApp</a>
+    <a href="tel:+96800000000">Call Us</a>
+    <a href="mailto:info@alwejhagroup.com">Email Us</a>
+  </div>
+</div>
+
+<div class="footer">
+  © 2025 ALWEJHA GROUP | 
+  <a href="/sitemap.xml">Sitemap</a> | 
+  <a href="#">Privacy Policy</a> | 
+  <a href="#">Terms of Service</a>
+</div>
+
 </body>
 </html>
-
